# ai-en-learning

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_core_tables.py  0002_seed_default_scenarios.py  0003_scenario_difficulty.py  0004_analytics_tables.py  0005_conversation_language.py  0006_conversation_customization.py  0007_onboarding_assessment.py  0008_learning_intelligence.py  0009_conversation_correction_mode.py  0010_seed_real_life_scenarios.py  0011_vocabulary_retention.py  0012_speaking_excellence.py  0013_retention_goals.py  0014_message_analyses.py  0015_user_credits.py  0016_daily_system.py  0017_credit_daily_reset.py
backend/app/: main.py
backend/app/core/: ai_client.py  ai_service.py  analytics_service.py  cache.py  career_advisor_service.py  cefr_service.py  coach_service.py  config.py  credit_service.py  exceptions.py  feedback_service.py  fluency_service.py  grammar_service.py  jwt_handler.py  lesson_service.py  logging.py  mistake_memory_service.py  personalization_service.py  rate_limit_service.py  report_service.py  retention_service.py  security.py  speaking_service.py  speech_service.py  vocabulary_service.py
backend/app/core/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
backend/app/utils/: helpers.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: check_alembic_revision_ids.py
frontend/: Dockerfile  (+6 more)
(+107 files in other folders)
