[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the AI interview platform MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.14.1",
  "fastapi==0.115.11",
  "bcrypt==4.2.1",
  "email-validator==2.2.0",
  "anthropic>=0.40.0",
  "openai==1.68.2",
  "psycopg2-binary==2.9.10",
  "pydantic==2.10.6",
  "pydantic-settings==2.8.1",
  "redis==5.2.1",
  "httpx==0.28.1",
  "python-jose==3.3.0",
  "python-multipart==0.0.20",
  "python-dotenv==1.0.1",
  "sqlalchemy==2.0.39",
  "uvicorn[standard]==0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "ruff==0.11.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
